--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_puro_surf"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/logo_puro_surf_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniBar">
 
@@ -21,10 +21,6 @@
         </provider>
 
         <activity
-            android:name=".Vista.Login_Vista"
-            android:exported="false"/>
-
-        <activity
             android:name=".Vista.SplashActivity_Vista"
             android:exported="true"
             android:theme="@style/SplashTheme">
@@ -35,6 +31,15 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.purosurf.minibar.Vista.InicioSesion.RecuperarCuenta"
+            android:exported="false" />
+        <activity
+            android:name="com.purosurf.minibar.Vista.InicioSesion.IniciarSesion"
+            android:exported="true"/>
+        <activity
+            android:name="com.purosurf.minibar.Vista.InicioSesion.ReestablecerContrasena"
+            android:exported="false" />
     </application>
 
 </manifest>
