--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,39 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniBar">
         <activity
+            android:name=".Vista.Administrador.GestionHabitaciones.ConfirmarInventarioMB"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.Administrador.GestionHabitaciones.AgregarProductoMB"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.Administrador.GestionHabitaciones.InventarioMB"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.DetalleReporteCons"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.DetalleReporteES"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.SeleccionarReporteCons"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.SeleccionarReporteES"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.VerExistencias"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.ConfirmarRE"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.AgregarProductoRE"
+            android:exported="false" />
+        <activity
+            android:name=".Vista.AdministradorEmpleado.RegistrarEditar"
+            android:exported="false" />
+        <activity
             android:name=".Vista.Administrador.GestionUsuarios.SeleccionarUsuario"
             android:exported="false" />
         <activity
