Interfaz de Productos completa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
             android:name=".Vista.Administrador.GestionProductos.ActualizarProducto"
             android:exported="false" />
         <activity
-            android:name=".Vista.Administrador.GestionProductos.DeshabilitarProductos"
+            android:name=".Vista.Administrador.GestionProductos.DeshabilitarProducto"
             android:exported="false" />
         <activity
             android:name=".Vista.Administrador.GestionProductos.SeleccionarProducto"
